[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "odsutils"
version = "1.0.0"
description = "Operational Data Sharing utilities"
readme = "README.md"
dependencies = ["astropy"]
license = { text = "MIT" }
authors = [{ name = "David DeBoer", email = "david.r.deboer@gmail.com"}]
keywords = ["ODS", "Operational Data Sharing", "radio astronomy", "satellite avoidance"]

[project.urls]
Homepage = "https://github.com/david-deboer/odsutils"
Repository = "https://github.com/david-deboer/odsutils"
Issues = "https://github.com/david-deboer/odsutils/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["odsutils*"]

[tool.setuptools.package-data]
odsutils = ["data/**/*"]